[gd_scene load_steps=15 format=2]

[ext_resource path="res://fonts/dpcomic.regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/MainMenu.gd" type="Script" id=2]
[ext_resource path="res://sound/menu_music.wav" type="AudioStream" id=3]
[ext_resource path="res://sprites/rainbow.png" type="Texture" id=4]
[ext_resource path="res://sprites/bg_cloud.png" type="Texture" id=5]
[ext_resource path="res://scripts/Menu.gd" type="Script" id=6]

[sub_resource type="DynamicFont" id=1]
size = 36
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=8]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="DynamicFont" id=7]
size = 38
font_data = ExtResource( 1 )

[node name="Menu" type="Node2D"]
pause_mode = 2
script = ExtResource( 6 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UI" type="Control" parent="CanvasLayer"]
margin_right = 1024.0
margin_bottom = 600.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" type="Label" parent="CanvasLayer/UI"]
margin_top = 168.0
margin_right = 1024.0
margin_bottom = 345.0
custom_fonts/font = SubResource( 1 )
text = "Made for Ludum Dare 49 by Ash Kestrel"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text2" type="Label" parent="CanvasLayer/UI"]
margin_top = 320.0
margin_right = 1024.0
margin_bottom = 416.0
custom_fonts/font = SubResource( 8 )
text = "Special thanks to my playtesters:
Christian & Dan Morrisson
Peter Yeager"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuButton" type="Button" parent="CanvasLayer/UI"]
margin_top = 552.0
margin_right = 1024.0
margin_bottom = 587.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
custom_fonts/font = SubResource( 7 )
text = "Main Menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = -2.019
autoplay = true

[node name="Clouds" type="Node2D" parent="."]

[node name="bg_cloud" type="Sprite" parent="Clouds"]
position = Vector2( 232, 448 )
scale = Vector2( 3, 3 )
texture = ExtResource( 5 )

[node name="bg_cloud2" type="Sprite" parent="Clouds"]
position = Vector2( 928, 520 )
scale = Vector2( 3, 3 )
texture = ExtResource( 5 )

[node name="bg_cloud3" type="Sprite" parent="Clouds"]
position = Vector2( 704, 168 )
scale = Vector2( 3, 3 )
texture = ExtResource( 5 )

[node name="Clouds2" type="Node2D" parent="."]
position = Vector2( -1008, -400 )

[node name="bg_cloud" type="Sprite" parent="Clouds2"]
position = Vector2( 232, 448 )
scale = Vector2( 3, 3 )
texture = ExtResource( 5 )

[node name="bg_cloud2" type="Sprite" parent="Clouds2"]
position = Vector2( 928, 520 )
scale = Vector2( 3, 3 )
texture = ExtResource( 5 )

[node name="bg_cloud3" type="Sprite" parent="Clouds2"]
position = Vector2( 704, 168 )
scale = Vector2( 3, 3 )
texture = ExtResource( 5 )

[node name="Rainbow" type="Sprite" parent="."]
position = Vector2( 512, 248 )
rotation = 1.57079
scale = Vector2( 1, 70.56 )
texture = ExtResource( 4 )

[connection signal="pressed" from="CanvasLayer/UI/MenuButton" to="CanvasLayer/UI" method="_on_MenuButton_pressed"]
