[gd_scene load_steps=14 format=2]

[ext_resource path="res://fonts/dpcomic.regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/MainMenu.gd" type="Script" id=2]
[ext_resource path="res://sound/menu_music.wav" type="AudioStream" id=3]
[ext_resource path="res://sprites/rainbow.png" type="Texture" id=4]
[ext_resource path="res://sprites/bg_cloud.png" type="Texture" id=5]
[ext_resource path="res://scripts/Menu.gd" type="Script" id=6]

[sub_resource type="DynamicFont" id=1]
size = 62
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="DynamicFont" id=7]
size = 38
font_data = ExtResource( 1 )

[node name="Menu" type="Node2D"]
pause_mode = 2
script = ExtResource( 6 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UI" type="Control" parent="CanvasLayer"]
margin_right = 1024.0
margin_bottom = 600.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="CanvasLayer/UI"]
margin_top = 160.0
margin_right = 1024.0
margin_bottom = 195.0
custom_fonts/font = SubResource( 1 )
text = "Shifty Showers"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="CanvasLayer/UI"]
margin_top = 320.0
margin_right = 1024.0
margin_bottom = 337.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
custom_fonts/font = SubResource( 7 )
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreditsButton" type="Button" parent="CanvasLayer/UI"]
margin_top = 368.0
margin_right = 1024.0
margin_bottom = 403.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
custom_fonts/font = SubResource( 7 )
text = "Credits"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = -2.019
autoplay = true

[node name="Clouds" type="Node2D" parent="."]

[node name="bg_cloud" type="Sprite" parent="Clouds"]
position = Vector2( 232, 448 )
scale = Vector2( 3, 3 )
texture = ExtResource( 5 )

[node name="bg_cloud2" type="Sprite" parent="Clouds"]
position = Vector2( 928, 520 )
scale = Vector2( 3, 3 )
texture = ExtResource( 5 )

[node name="bg_cloud3" type="Sprite" parent="Clouds"]
position = Vector2( 704, 168 )
scale = Vector2( 3, 3 )
texture = ExtResource( 5 )

[node name="Clouds2" type="Node2D" parent="."]
position = Vector2( -1008, -400 )

[node name="bg_cloud" type="Sprite" parent="Clouds2"]
position = Vector2( 232, 448 )
scale = Vector2( 3, 3 )
texture = ExtResource( 5 )

[node name="bg_cloud2" type="Sprite" parent="Clouds2"]
position = Vector2( 928, 520 )
scale = Vector2( 3, 3 )
texture = ExtResource( 5 )

[node name="bg_cloud3" type="Sprite" parent="Clouds2"]
position = Vector2( 704, 168 )
scale = Vector2( 3, 3 )
texture = ExtResource( 5 )

[node name="Rainbow" type="Sprite" parent="."]
position = Vector2( 512, 248 )
rotation = 1.57079
scale = Vector2( 1, 70.56 )
texture = ExtResource( 4 )

[connection signal="pressed" from="CanvasLayer/UI/StartButton" to="CanvasLayer/UI" method="_on_StartButton_pressed"]
[connection signal="pressed" from="CanvasLayer/UI/CreditsButton" to="CanvasLayer/UI" method="_on_CreditsButton_pressed"]
